@@ -1,5 +1,10 @@
 2009-04-04  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/polkit-helpers.c
+		- (pk_helper_obtain_auth): handle NULL PolicyKit error
+
+2009-04-04  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-wired-security.c
 		- (ce_page_wired_security_new): don't connect to the "use 802.1x"
 			checkbox's 'toggled' signal here, do it after setting the
